src/main/java/com/grakra/failpoint/action/FailPointActionParser.java
// Generated from com/grakra/failpoint/action/FailPointAction.g4 by ANTLR 4.7.1
package com.grakra.failpoint.action;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FailPointActionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BooleanLiteral=1, StringLiteral=2, IntegerLiteral=3, FloatLiteral=4, Ignored_Ws=5, 
		Arrow=6, Gdb=7, Gcore=8, Return=9, Stall=10, StallReturn=11, Disable=12, 
		Enable=13, Show=14, Status=15, Clear=16, Nop=17, LeftParenthesis=18, RightParenthesis=19, 
		LeftBracket=20, RightBracket=21, Star=22, Comma=23;
	public static final int
		RULE_failpoint_action = 0, RULE_failpoint_action_internal = 1, RULE_act_series = 2, 
		RULE_act_series_trail = 3, RULE_act_simple = 4, RULE_act_series_elm = 5, 
		RULE_act_random = 6, RULE_act_random_elm = 7, RULE_random_prob = 8, RULE_act_qualifiable = 9, 
		RULE_act_repeated = 10, RULE_repeat_times = 11, RULE_act_repeatable = 12, 
		RULE_act_gdb = 13, RULE_act_gcore = 14, RULE_act_nop = 15, RULE_act_stall_return = 16, 
		RULE_act_stall = 17, RULE_act_return = 18, RULE_act_show = 19, RULE_act_disable = 20, 
		RULE_act_enable = 21, RULE_act_status = 22, RULE_act_clear = 23, RULE_literal = 24, 
		RULE_numerical_literal = 25, RULE_booleanLiteral = 26, RULE_stringLiteral = 27, 
		RULE_integerLiteral = 28, RULE_floatLiteral = 29;
	public static final String[] ruleNames = {
		"failpoint_action", "failpoint_action_internal", "act_series", "act_series_trail", 
		"act_simple", "act_series_elm", "act_random", "act_random_elm", "random_prob", 
		"act_qualifiable", "act_repeated", "repeat_times", "act_repeatable", "act_gdb", 
		"act_gcore", "act_nop", "act_stall_return", "act_stall", "act_return", 
		"act_show", "act_disable", "act_enable", "act_status", "act_clear", "literal", 
		"numerical_literal", "booleanLiteral", "stringLiteral", "integerLiteral", 
		"floatLiteral"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, "'->'", "'gdb'", "'gcore'", "'return'", 
		"'stall'", "'stall_return'", "'disable'", "'enable'", "'show'", "'status'", 
		"'clear'", "'nop'", "'('", "')'", "'['", "']'", "'*'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "BooleanLiteral", "StringLiteral", "IntegerLiteral", "FloatLiteral", 
		"Ignored_Ws", "Arrow", "Gdb", "Gcore", "Return", "Stall", "StallReturn", 
		"Disable", "Enable", "Show", "Status", "Clear", "Nop", "LeftParenthesis", 
		"RightParenthesis", "LeftBracket", "RightBracket", "Star", "Comma"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FailPointAction.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FailPointActionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Failpoint_actionContext extends ParserRuleContext {
		public Failpoint_action_internalContext failpoint_action_internal() {
			return getRuleContext(Failpoint_action_internalContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FailPointActionParser.EOF, 0); }
		public Failpoint_actionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_failpoint_action; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterFailpoint_action(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitFailpoint_action(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitFailpoint_action(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Failpoint_actionContext failpoint_action() throws RecognitionException {
		Failpoint_actionContext _localctx = new Failpoint_actionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_failpoint_action);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			failpoint_action_internal();
			setState(61);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Failpoint_action_internalContext extends ParserRuleContext {
		public Act_simpleContext act_simple() {
			return getRuleContext(Act_simpleContext.class,0);
		}
		public Act_seriesContext act_series() {
			return getRuleContext(Act_seriesContext.class,0);
		}
		public Failpoint_action_internalContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_failpoint_action_internal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterFailpoint_action_internal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitFailpoint_action_internal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitFailpoint_action_internal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Failpoint_action_internalContext failpoint_action_internal() throws RecognitionException {
		Failpoint_action_internalContext _localctx = new Failpoint_action_internalContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_failpoint_action_internal);
		try {
			setState(65);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Gdb:
			case Gcore:
			case Disable:
			case Enable:
			case Show:
			case Status:
			case Clear:
				enterOuterAlt(_localctx, 1);
				{
				setState(63);
				act_simple();
				}
				break;
			case IntegerLiteral:
			case Return:
			case Stall:
			case StallReturn:
			case Nop:
			case LeftBracket:
				enterOuterAlt(_localctx, 2);
				{
				setState(64);
				act_series();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_seriesContext extends ParserRuleContext {
		public List<Act_series_elmContext> act_series_elm() {
			return getRuleContexts(Act_series_elmContext.class);
		}
		public Act_series_elmContext act_series_elm(int i) {
			return getRuleContext(Act_series_elmContext.class,i);
		}
		public List<TerminalNode> Arrow() { return getTokens(FailPointActionParser.Arrow); }
		public TerminalNode Arrow(int i) {
			return getToken(FailPointActionParser.Arrow, i);
		}
		public Act_series_trailContext act_series_trail() {
			return getRuleContext(Act_series_trailContext.class,0);
		}
		public Act_seriesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_series; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_series(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_series(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_series(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_seriesContext act_series() throws RecognitionException {
		Act_seriesContext _localctx = new Act_seriesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_act_series);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			act_series_elm();
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Arrow) {
				{
				{
				setState(68);
				match(Arrow);
				setState(69);
				act_series_elm();
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Disable) {
				{
				setState(75);
				act_series_trail();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_series_trailContext extends ParserRuleContext {
		public Act_disableContext act_disable() {
			return getRuleContext(Act_disableContext.class,0);
		}
		public Act_series_trailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_series_trail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_series_trail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_series_trail(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_series_trail(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_series_trailContext act_series_trail() throws RecognitionException {
		Act_series_trailContext _localctx = new Act_series_trailContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_act_series_trail);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			act_disable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_simpleContext extends ParserRuleContext {
		public Act_gdbContext act_gdb() {
			return getRuleContext(Act_gdbContext.class,0);
		}
		public Act_gcoreContext act_gcore() {
			return getRuleContext(Act_gcoreContext.class,0);
		}
		public Act_enableContext act_enable() {
			return getRuleContext(Act_enableContext.class,0);
		}
		public Act_statusContext act_status() {
			return getRuleContext(Act_statusContext.class,0);
		}
		public Act_clearContext act_clear() {
			return getRuleContext(Act_clearContext.class,0);
		}
		public Act_showContext act_show() {
			return getRuleContext(Act_showContext.class,0);
		}
		public Act_disableContext act_disable() {
			return getRuleContext(Act_disableContext.class,0);
		}
		public Act_simpleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_simple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_simple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_simple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_simple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_simpleContext act_simple() throws RecognitionException {
		Act_simpleContext _localctx = new Act_simpleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_act_simple);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Gdb:
				enterOuterAlt(_localctx, 1);
				{
				setState(80);
				act_gdb();
				}
				break;
			case Gcore:
				enterOuterAlt(_localctx, 2);
				{
				setState(81);
				act_gcore();
				}
				break;
			case Enable:
				enterOuterAlt(_localctx, 3);
				{
				setState(82);
				act_enable();
				}
				break;
			case Status:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				act_status();
				}
				break;
			case Clear:
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				act_clear();
				}
				break;
			case Show:
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				act_show();
				}
				break;
			case Disable:
				enterOuterAlt(_localctx, 7);
				{
				setState(86);
				act_disable();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_series_elmContext extends ParserRuleContext {
		public Act_repeatableContext act_repeatable() {
			return getRuleContext(Act_repeatableContext.class,0);
		}
		public Act_repeatedContext act_repeated() {
			return getRuleContext(Act_repeatedContext.class,0);
		}
		public Act_series_elmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_series_elm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_series_elm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_series_elm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_series_elm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_series_elmContext act_series_elm() throws RecognitionException {
		Act_series_elmContext _localctx = new Act_series_elmContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_act_series_elm);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Return:
			case Stall:
			case StallReturn:
			case Nop:
			case LeftBracket:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				act_repeatable();
				}
				break;
			case IntegerLiteral:
				enterOuterAlt(_localctx, 2);
				{
				setState(90);
				act_repeated();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_randomContext extends ParserRuleContext {
		public TerminalNode LeftBracket() { return getToken(FailPointActionParser.LeftBracket, 0); }
		public List<Act_random_elmContext> act_random_elm() {
			return getRuleContexts(Act_random_elmContext.class);
		}
		public Act_random_elmContext act_random_elm(int i) {
			return getRuleContext(Act_random_elmContext.class,i);
		}
		public TerminalNode RightBracket() { return getToken(FailPointActionParser.RightBracket, 0); }
		public List<TerminalNode> Comma() { return getTokens(FailPointActionParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(FailPointActionParser.Comma, i);
		}
		public Act_randomContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_random; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_random(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_random(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_random(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_randomContext act_random() throws RecognitionException {
		Act_randomContext _localctx = new Act_randomContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_act_random);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(LeftBracket);
			setState(94);
			act_random_elm();
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Comma) {
				{
				{
				setState(95);
				match(Comma);
				setState(96);
				act_random_elm();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(102);
			match(RightBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_random_elmContext extends ParserRuleContext {
		public Random_probContext random_prob() {
			return getRuleContext(Random_probContext.class,0);
		}
		public TerminalNode Star() { return getToken(FailPointActionParser.Star, 0); }
		public Act_qualifiableContext act_qualifiable() {
			return getRuleContext(Act_qualifiableContext.class,0);
		}
		public Act_random_elmContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_random_elm; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_random_elm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_random_elm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_random_elm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_random_elmContext act_random_elm() throws RecognitionException {
		Act_random_elmContext _localctx = new Act_random_elmContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_act_random_elm);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			random_prob();
			setState(105);
			match(Star);
			setState(106);
			act_qualifiable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Random_probContext extends ParserRuleContext {
		public FloatLiteralContext floatLiteral() {
			return getRuleContext(FloatLiteralContext.class,0);
		}
		public Random_probContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_random_prob; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterRandom_prob(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitRandom_prob(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitRandom_prob(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Random_probContext random_prob() throws RecognitionException {
		Random_probContext _localctx = new Random_probContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_random_prob);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			floatLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_qualifiableContext extends ParserRuleContext {
		public Act_nopContext act_nop() {
			return getRuleContext(Act_nopContext.class,0);
		}
		public Act_stallContext act_stall() {
			return getRuleContext(Act_stallContext.class,0);
		}
		public Act_returnContext act_return() {
			return getRuleContext(Act_returnContext.class,0);
		}
		public Act_stall_returnContext act_stall_return() {
			return getRuleContext(Act_stall_returnContext.class,0);
		}
		public Act_qualifiableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_qualifiable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_qualifiable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_qualifiable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_qualifiable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_qualifiableContext act_qualifiable() throws RecognitionException {
		Act_qualifiableContext _localctx = new Act_qualifiableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_act_qualifiable);
		try {
			setState(114);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Nop:
				enterOuterAlt(_localctx, 1);
				{
				setState(110);
				act_nop();
				}
				break;
			case Stall:
				enterOuterAlt(_localctx, 2);
				{
				setState(111);
				act_stall();
				}
				break;
			case Return:
				enterOuterAlt(_localctx, 3);
				{
				setState(112);
				act_return();
				}
				break;
			case StallReturn:
				enterOuterAlt(_localctx, 4);
				{
				setState(113);
				act_stall_return();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_repeatedContext extends ParserRuleContext {
		public Repeat_timesContext repeat_times() {
			return getRuleContext(Repeat_timesContext.class,0);
		}
		public TerminalNode Star() { return getToken(FailPointActionParser.Star, 0); }
		public Act_repeatableContext act_repeatable() {
			return getRuleContext(Act_repeatableContext.class,0);
		}
		public Act_repeatedContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_repeated; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_repeated(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_repeated(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_repeated(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_repeatedContext act_repeated() throws RecognitionException {
		Act_repeatedContext _localctx = new Act_repeatedContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_act_repeated);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			repeat_times();
			setState(117);
			match(Star);
			setState(118);
			act_repeatable();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Repeat_timesContext extends ParserRuleContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public Repeat_timesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_repeat_times; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterRepeat_times(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitRepeat_times(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitRepeat_times(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Repeat_timesContext repeat_times() throws RecognitionException {
		Repeat_timesContext _localctx = new Repeat_timesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_repeat_times);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			integerLiteral();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_repeatableContext extends ParserRuleContext {
		public Act_qualifiableContext act_qualifiable() {
			return getRuleContext(Act_qualifiableContext.class,0);
		}
		public Act_randomContext act_random() {
			return getRuleContext(Act_randomContext.class,0);
		}
		public Act_repeatableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_repeatable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_repeatable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_repeatable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_repeatable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Act_repeatableContext act_repeatable() throws RecognitionException {
		Act_repeatableContext _localctx = new Act_repeatableContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_act_repeatable);
		try {
			setState(124);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Return:
			case Stall:
			case StallReturn:
			case Nop:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				act_qualifiable();
				}
				break;
			case LeftBracket:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				act_random();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Act_gdbContext extends ParserRuleContext {
		public TerminalNode Gdb() { return getToken(FailPointActionParser.Gdb, 0); }
		public Act_gdbContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_act_gdb; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).enterAct_gdb(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointActionListener ) ((FailPointActionListener)listener).exitAct_gdb(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointActionVisitor ) return ((FailPointActionVisitor<? extends T>)visitor).visitAct_gdb(this);
			else return visitor.visitChildren(this);
		}
	}
